tests/expectations/compiler/function/undefined_data_type_fail.out
DCE_ENABLED:
Error [ETYC0372017]: The type `Board` is not found in the current scope.
    --> compiler-test:3:35
     |
   3 |     function aria192check_for_win(b: Board, p: u8) -> u128bool {
     |                                   ^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `Board` is not found in the current scope.
    --> compiler-test:3:35
     |
   3 |     function aria192check_for_win(b: Board, p: u8) -> u128bool {
     |                                   ^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `u128bool` is not found in the current scope.
    --> compiler-test:3:55
     |
   3 |     function aria192check_for_win(b: Board, p: u8) -> u128bool {
     |                                                       ^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372005]: Unknown variable `test`
    --> compiler-test:4:16
     |
   4 |         return test;
     |                ^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372017]: The type `Board` is not found in the current scope.
    --> compiler-test:3:35
     |
   3 |     function aria192check_for_win(b: Board, p: u8) -> u128bool {
     |                                   ^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `Board` is not found in the current scope.
    --> compiler-test:3:35
     |
   3 |     function aria192check_for_win(b: Board, p: u8) -> u128bool {
     |                                   ^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `u128bool` is not found in the current scope.
    --> compiler-test:3:55
     |
   3 |     function aria192check_for_win(b: Board, p: u8) -> u128bool {
     |                                                       ^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372005]: Unknown variable `test`
    --> compiler-test:4:16
     |
   4 |         return test;
     |                ^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^
